--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,34 @@ body {
 
 .menu-wrapper a {
     text-decoration: none;
-    color: #25202F;
+    color: #7E7F86;
+}
+
+.menu-wrapper {
+    position: relative;
+}
+
+.logo {
+    position: absolute;
+}
+
+.menu_ul {
+    display: flex;
+    margin-left: 10%;
+}
+
+.li_item {
+    list-style: none;
     margin-left: 40px;
     margin-top: 10px;
 }
 
-.menu-wrapper {
-    display: grid;
-    grid-template-columns: repeat(19, 1fr);
+.li_item a:hover {
+    color: black;
+}
+
+.li_item a:focus {
+    color: black;
 }
 
 .menu-wrapper a {
@@ -66,16 +86,16 @@ body {
 }
 
 .bttn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    text-align: center;
     font-size: x-large;
     border: 1px solid blueviolet;
     background-color: blueviolet;
     color: white;
     border-radius: 100px;
-    width: 200px;
-    height: 60px;
+    width: 210px;
+    /* height: 60px; */
+    padding: 15px 0;
     text-decoration: none;
     margin-top: 50px;
 }
@@ -110,9 +130,10 @@ body {
 
 .articles {
     margin-top: 50px;
+    min-height: 100px;
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
 }
 
@@ -199,16 +220,23 @@ body {
     grid-gap: 30px;
 }
 
-.gallery__img1 {
+ .gallery__img1 {
+    /* grid-column: 2/7;
+    grid-row: 1/3;
+    background-image: url(../images/img1.png); */
+}
+
+.first__signature {
     grid-column: 2/7;
     grid-row: 1/3;
     background-image: url(../images/img1.png);
+
 }
 
 .signature {
-    grid-column: 2/7;
-    grid-row: 3/4;
-}
+   margin-top: 75%;
+} 
+
 
 .signature__data1 {
     color: #8643DC;
@@ -229,37 +257,24 @@ body {
 .signature__data2 {
     font-size: 16px;
     color: red;
-    position: absolute;
-    left: 20px;
-    bottom: 104px;
 }
 
 .signature__description2 {
     font-weight: bold;
     font-size: 20px;
+    width: 200px;
     color: red;
-    position: absolute;
-    left: 20px;
-    right: 38px;
-    bottom: 30px;
 }
 
 .signature__data3 {
     font-size: 16px;
     color: red;
-    position: absolute;
-    left: 20px;
-    bottom: 86px;
 }
 
 .signature__description3 {
     font-weight: bold;
     font-size: 20px;
     color: red;
-    position: absolute;
-    left: 20px;
-    right: 38px;
-    bottom: 30px;
 }
 
 .gallery__img3 {
@@ -267,6 +282,18 @@ body {
     grid-column: 11/15;
     grid-row: 1/4;
     background-image: url(../images/img3.png);
+}
+
+.gallery__signature1 {
+    position: absolute;
+    top:  66%;
+    left: 10%;
+}
+
+.gallery__signature2 {
+    position: absolute;
+    top:  73%;
+    left: 10%;
 }
 
 /*---------contact form-------------*/
