--- a/css/style.css
+++ b/css/style.css
@@ -185,10 +185,11 @@ body {
 
 .explore {
     font-size: 24px;
-    text-decoration: none;
+    text-decoration: underline;
     color: #25202F;
+    /* color: #25202F;
     border-bottom: 2px #25202F solid;
-    padding-bottom: 1px;
+    padding-bottom: 1px; */
 }
 
 .pictures {
@@ -218,12 +219,6 @@ body {
     grid-template-columns: repeat(14, 1fr);
     grid-template-rows: repeat(3, 101px);
     grid-gap: 30px;
-}
-
- .gallery__img1 {
-    /* grid-column: 2/7;
-    grid-row: 1/3;
-    background-image: url(../images/img1.png); */
 }
 
 .first__signature {
@@ -319,4 +314,55 @@ body {
     text-decoration: none;
     font-size: 24px;
     color: #8643DC;
+}
+
+#contact-form {
+    width: 100%;
+}
+
+#name,
+#mail,
+#message
+{
+    margin-top: 10%;
+    padding-bottom: 4%;
+    border: none;
+    border-bottom: 1px solid #DAD2E3;
+    font-size: 20px;
+    width: 225%;
+    outline: none;
+}
+
+.form-btn {
+    text-align: center;
+    font-size: 18px;
+    border: 1px solid blueviolet;
+    background-color: blueviolet;
+    color: white;
+    border-radius: 100px;
+    width: 200px;
+    padding: 20px 0;
+    margin-top: 25px;
+}
+/* -----------footer------------- */
+
+h2 {
+    font-size: 40px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+    padding-bottom: 3%;
+}
+
+.contacts {
+    margin-top: 3%;
+}
+
+.contacts img {
+    padding: 0 20px;
 }
